# coluna

./: Cargo.toml  README.md  check.sh  compose.yml  init.sql  rustfmt.toml
src/: lib.rs
src/encoding/: mod.rs  pipeline.rs  types.rs
src/encoding/coerce/: error.rs  mod.rs
src/encoding/column/: builder.rs  mod.rs
src/encoding/column/builder/: nested.rs  nullable.rs  storage.rs
src/encoding/row/: encode.rs  error.rs  mod.rs
src/encoding/schema/: mod.rs
src/formats/: mod.rs
src/formats/arrow/: array.rs  mod.rs  sink.rs  spec.rs
src/formats/json/: access.rs  mod.rs  row.rs  sink.rs
src/formats/postgres/: mod.rs  row.rs  sqlx.rs
tests/: json.rs
