[package]
name = "coluna"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"

arrow_v54 = { package = "arrow", version = "54", optional = true }
arrow_v55 = { package = "arrow", version = "55", optional = true }
arrow_v56 = { package = "arrow", version = "56", optional = true }
arrow_v57 = { package = "arrow", version = "57", optional = true }
chrono = { version = "0.4", optional = true }
half = { version = "2.6", optional = true }
serde_json = { version = "1", optional = true }
postgres-types = { version = "0.2.11", features = ["derive"], optional = true }
sqlx = { version = "0.8.6", optional = true, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[features]
arrow-54 = ["dep:arrow_v54", "dep:half"]
arrow-55 = ["dep:arrow_v55", "dep:half"]
arrow-56 = ["dep:arrow_v56", "dep:half"]
arrow-57 = ["dep:arrow_v57", "dep:half"]
arrow = ["arrow-57"]
json = ["dep:chrono", "dep:serde_json"]
postgres = ["dep:postgres-types"]
sqlx-postgres = ["dep:sqlx", "postgres"]
default = ["arrow", "json", "sqlx-postgres"]
